--- a/mobile.css
+++ b/mobile.css
@@ -120,3 +120,19 @@ img{
 		color:white;
 	}
 }
+.header{
+	opacity: 1;
+  animation-name: fadein;
+  animation-duration: 5s;
+  -webkit-animation-name:fadein;
+  -webkit-animation-duration:5s;
+  }
+@-webkit-keyframes fadein {
+   from {opacity: 0;}
+    to {opacity:1;}
+}
+
+@keyframes fadein {
+  from {opacity:0;}
+    to {opacity:1;}
+	}
