--- a/Work.css
+++ b/Work.css
@@ -1,169 +1,29 @@
-* {
-	-webkit-box-sizing: border-box; /* Safari 3.0 - 5.0, Chrome 1 - 9, Android 2.1 - 3.x */
-	-moz-box-sizing: border-box;    /* Firefox 1 - 28 */
-	box-sizing: border-box;         /* Safari 5.1+, Chrome 10+, Firefox 29+, Opera 7+, IE 8+, Android 4.0+, iOS any */	
-}
-.header{
-	text-align:center;
-	padding: 28px;
-	font-size: 25px;
-	font-family: 'Open Sans', sans-serif;
-}
-a{
-	text-decoration: none;
-	color:black;
-}
-.nav{
-	text-align:center;
-	padding-top:20px;
-	font-size:16px;
-	font-family: 'Open Sans', sans-serif;
-}
-ul{
-	margin:0 auto;
-	list-style-type:none;
-	padding:0;
-}
-body{
-	background-color: red;
-	margin:0;
-}
-.description{
-	width:98%;
-	/*height:61px;*/
-	margin:20px 1%;
-	display:block;
-	font-size:16px;
-}
+<!DOCTYPE html>
+<html>
+	<head>
+		<link rel="stylesheet" type="text/css" href="Meyers css.css"/>
+		<link rel="stylesheet" type="text/css" href="mobile.css"/>
+			
+		<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+		<title>Erick Contact</title> 
+	</head>
+	
 
-
-@media (min-width: 768px) {
-	.header {
-		font-size: 48px;
-	}
-	.nav{
-		font-size:30px;
-	}
-	h3{
+	<body>
+		<div class="header">
+			<h1>Contact</h1>
+		<div class="nav">
+			<p><a href="C:\Users\Erick\Desktop\Future Programer\mobile.html">Home</a>            
+				<a href="C:\Users\Erick\Desktop\Future Programer\Bio.html">Bio</a>         
+				<a href="C:\Users\Erick\Desktop\Future Programer\Work.html">Work</a>          
+				<a href="C:\Users\Erick\Desktop\Future Programer\Contact.html">Contacts<a></p>
+		</div>
+		</div>
 		
-		text-align: center;
-	}
-	h2{
-		text-align: center;
-	}
-	p{
-		font-size: 16px;
-		text-align:center;
-	}
-}
-@media (min-width: 1241px) {
-	.header{
-		font-size: 64px;
-		color:white;
-	}
-	.nav{
-		font-size: 40px;
-		color:white;
-	}
-	body{
-		background:black;
-	}
-	a{
-		color:white;
-	}
-	h3{
-		color:white;
-		text-align: center;
-	}
-	h2{
-		color:white;
-		text-align: center;
-		font-size: 25px;
-	}
-	.description{
-		font-size:20px;
-		color:white;
-		text-align:center;
-		width:800px;
-		margin:0 auto;
-	}
-}
-/*.scroll{
-    width: 800px;
-    height: 150px;
-    overflow: scroll;
-    text-align: center;
-}*/
+		<!-- PLACE ALL OF YOUR PAGE CONTENT BELOW HERE -->
 
-/*@media (min-width: 768px) {
-	.ul {
-		width: 586px;
-		margin: 0 auto;
-		/*width: 76.30208333%;
-	}	
-}
-
-/*@media (min-width: 1241px) {
-	.ul {
-		width: 984px;
-		/*width: 96.09375%;
-		max-width: 1200px;
-	}	
-}*/
-img{
-	width:98%;
-	/*height:61px;*/
-	margin:20px 1%;
-	display:block;
-}
-@media (min-width: 768px) {
-	img {
-		width: 600px;
-		margin:0 auto;
-
-		/*width: 43.14381271%;*/
 		
-		
-		
-		/*margin: 3.412969283%;*/
-	}
-}
+		<!-- AND ABOVE HERE -->
 
-@media (min-width: 1241px) {
-	img {
-		width: 800px;
-		/*width: 29.26829268%;*/
-		
-		/*margin: 2.032520325%;*/
-		margin:0 auto;
-		
-		padding-bottom: 20px;
-	}	
-}
-
-
-.footer{
-	clear:both;
-	text-align:center;
-	font-size:23px;
-	font-family: 'Open Sans', sans-serif;
-}
-@media (min-width: 768px) {
-	.footer {
-		font-size:30px;
-	}
-}
-
-@media (min-width: 1241px) {
-	.footer {
-		font-size:40px;
-		color:white;
-	}
-}
-.bio{
-	background-image:url("http://galyonkin.com/wp-content/uploads/2011/10/Broken-Playstation-Controller-Wallpaper.png");
-	width:1000px;
-	height:800px;
-	padding-left: 400px;
-	padding-right:50px;
-}
+	</body>
+</html>
