--- a/mobile.css
+++ b/mobile.css
@@ -42,6 +42,23 @@ body{
 		font-size: 64px;
 		color:white;
 	}
+		/*{
+	opacity: 1;
+  animation-name: fadein;
+  animation-duration: 5s;
+  -webkit-animation-name:fadein;
+  -webkit-animation-duration:5s;
+  }
+@-webkit-keyframes fadein {
+   from {opacity: 0;}
+    to {opacity:1;}
+}
+
+@keyframes fadein {
+  from {opacity:0;}
+    to {opacity:1;}
+	}
+	}*/
 	.nav{
 		font-size: 40px;
 		color:white;
@@ -120,19 +137,4 @@ img{
 		color:white;
 	}
 }
-.header{
-	opacity: 1;
-  animation-name: fadein;
-  animation-duration: 5s;
-  -webkit-animation-name:fadein;
-  -webkit-animation-duration:5s;
-  }
-@-webkit-keyframes fadein {
-   from {opacity: 0;}
-    to {opacity:1;}
-}
 
-@keyframes fadein {
-  from {opacity:0;}
-    to {opacity:1;}
-	}
