--- a/mobile.css
+++ b/mobile.css
@@ -1,3 +1,35 @@
+@font-face {
+	font-family: 'icomoon';
+	src:url('fonts/icomoon.eot?-s16rz7');
+	src:url('fonts/icomoon.eot?#iefix-s16rz7') format('embedded-opentype'),
+		url('fonts/icomoon.woff?-s16rz7') format('woff'),
+		url('fonts/icomoon.ttf?-s16rz7') format('truetype'),
+		url('fonts/icomoon.svg?-s16rz7#icomoon') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+[class^="icon-"], [class*=" icon-"] {
+	font-family: 'icomoon';
+	speak: none;
+	font-style: normal;
+	font-weight: normal;
+	font-variant: normal;
+	text-transform: none;
+	line-height: 1;
+
+	/* Better Font Rendering =========== */
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+.icon-facebook2:before {
+	content: "\ea8d";
+	font-size:30px;
+
+}
+
+
 * {
 	-webkit-box-sizing: border-box; /* Safari 3.0 - 5.0, Chrome 1 - 9, Android 2.1 - 3.x */
 	-moz-box-sizing: border-box;    /* Firefox 1 - 28 */
@@ -137,4 +169,6 @@ img{
 		color:white;
 	}
 }
+
+
 
