--- a/pjct.css
+++ b/pjct.css
@@ -46,7 +46,7 @@ h2{
 	font-family: 'Open Sans', sans-serif;
 	text-align: center;
 }
-@media (max-width: 768px) {
+@media (min-width: 768px) {
 	.header {
 		font-size: 38px;
 	}
@@ -55,7 +55,7 @@ h2{
 	}
 }
 	
-@media (max-width: 1241px) {
+@media (min-width: 1024px) {
 	.header{
 		color:white;
 		font-size: 48px;
@@ -79,7 +79,7 @@ h2{
 	.description{
 		font-size:20px;
 		color:white;
-		width:500px;
+		width:800px;
 		margin:0 auto;
 	}
 	.footer{
