--- a/mobile.css
+++ b/mobile.css
@@ -44,8 +44,15 @@
 	font-size:16px;
 	color:white;
 }
-
-
+.portfolioicon{
+width: 30px;
+	/*width: 65.625%;*/
+	height: 30px;
+	margin: 20px auto;
+	/*margin: 6.25% auto;*/
+	
+	display: block;
+}
 .header{
 	text-align:center;
 	padding: 28px;
