--- a/mobile.css
+++ b/mobile.css
@@ -68,7 +68,13 @@ a{
 	font-size:16px;
 	font-family: 'Open Sans', sans-serif;
 }
+h3{
+	width:98%;
+	margin:20px 1%;
+	display:block;
+	font-family: 'Open Sans', sans-serif;
 
+}
 body{
 	background-color: red;
 	margin:0;
@@ -98,6 +104,11 @@ body{
 		
 	a{
 		color:white;
+	}
+	h3{
+		color:white;
+		margin: 0 auto;
+		padding-left: 350px;
 	}
 }
 
