--- a/mobile.css
+++ b/mobile.css
@@ -75,7 +75,7 @@ h3{
 
 }
 body{
-	background-color: red;
+	background-color:#FF3300;
 	margin:0;
 }
 
@@ -96,9 +96,13 @@ body{
 		font-size: 40px;
 		color:white;
 	}
-	body{
 		
-		background-color:black;
+		body{
+	background-image:url("http://p1.pichost.me/i/30/1529961.jpg");
+	background-repeat:no-repeat;
+	background-size:relative;
+	background-position:center;
+	background-attachment: fixed;;
 	}
 		
 	a{
