--- a/pjct.css
+++ b/pjct.css
@@ -69,11 +69,7 @@ h2{
 		font-size: 40px;
 	}
 	body{
-	background-image:url("http://p1.pichost.me/i/30/1529961.jpg");
-	background-repeat:no-repeat;
-	background-size:relative;
-	background-position:center;
-	background-attachment: fixed;;
+	background-color:black;
 	}
 	a{
 		color:white;
