--- a/mobile.css
+++ b/mobile.css
@@ -79,6 +79,8 @@ body{
 	margin:0;
 }
 
+
+
 @media (min-width: 768px) {
 	.header {
 		font-size: 48px;
@@ -112,7 +114,7 @@ body{
 }
 
 
-
+.id,
 img{
 	width:98%;
 	/*height:61px;*/
@@ -143,6 +145,11 @@ img{
 		padding-bottom: 20px;
 
 	}	
+	.id{
+		width:200px;
+		margin:0 auto;
+		margin-left: 150px;
+	}
 }
 
 
