--- a/pjct.css
+++ b/pjct.css
@@ -69,7 +69,11 @@ h2{
 		font-size: 40px;
 	}
 	body{
-	background-color:black;
+	background-image:url(stardust.png);
+	
+	background-size:relative;
+	background-position:center;
+	background-attachment: fixed;
 	}
 	a{
 		color:white;
