--- a/pjct.css
+++ b/pjct.css
@@ -13,7 +13,7 @@
 
 a{
 	text-decoration: none;
-	color:black;
+	color:white;
 }
 .nav{
 	text-align:center;
@@ -41,6 +41,7 @@ body{
 	float:right;}
 .description
 {
+	color:white;
 	width:98%;
 	margin:20px 1%;
 	display:block;
@@ -125,6 +126,7 @@ img{
 */
 
 .footer{
+	color:white;
 	clear:both;
 	text-align:center;
 	font-size:16px;
