--- a/mobile.css
+++ b/mobile.css
@@ -89,13 +89,8 @@ body{
 	}
 }
 
-.id{
-		width:300px;
-		height: 250px;
-		margin:0 auto;
-		margin-left: 73px;
-	}
 
+.id
 img{
 	width:98%;
 	/*height:61px;*/
@@ -139,7 +134,7 @@ img{
 }
 @media (min-width: 768px) {
 	.footer {
-		font-size:30px;
+		font-size:25px;
 		color:white;
 	}
 }
